@@ -1,3 +1,9 @@
+v2016-05-06.2
+  * bash & zsh:
+      修正了loginTmux 无法兼容bash 的问题
+  * tmux:
+      不再指定默认shell
+
 v2016-05-06
   * bash & zsh:
       单独将tmux 相关的函数拉出一个插件
